feat: 集成、样式修改及翻译

--- a/src/app/modules/home/components/dashboard-page/dashboard-toolbar.component.scss
+++ b/src/app/modules/home/components/dashboard-page/dashboard-toolbar.component.scss
@@ -61,6 +61,8 @@ tb-dashboard-toolbar {
   .mat-fab-toolbar {
     mat-fab-trigger {
       .mat-mdc-fab {
+        background: transparent;
+        background-color: transparent;
         width: 36px;
         height: 36px;
         margin: 4px 0 0 4px;
@@ -68,7 +70,6 @@ tb-dashboard-toolbar {
     }
 
     &.is-fullscreen {
-
       .mat-fab-toolbar-wrapper {
         height: $mobile-toolbar-height-total;
 
