--- a/src/app/modules/home/components/widget/lib/home-page/link.component.scss
+++ b/src/app/modules/home/components/widget/lib/home-page/link.component.scss
@@ -20,7 +20,7 @@
     box-shadow: 0 5px 16px rgba(0, 0, 0, 0.04);
     border-radius: 10px;
     &.edit-mode {
-      border: 1px solid rgba(48, 86, 128, 0.32);
+      border: 1px solid rgba(22, 93, 255, 0.32);
     }
   }
   .tb-link {
@@ -29,7 +29,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 8px;
-    background: #FFFFFF;
+    background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.05);
     box-shadow: 0 5px 16px rgba(0, 0, 0, 0.04);
     border-radius: 10px;
@@ -40,7 +40,7 @@
       .tb-link-icon-container {
         height: 40px;
         padding: 8px;
-        background: #F3F6FA;
+        background: #f3f6fa;
         border-radius: 6px;
         margin-right: 8px;
       }
