--- a/src/app/modules/home/pages/security/authentication-dialog/authentication-dialog.component.scss
+++ b/src/app/modules/home/pages/security/authentication-dialog/authentication-dialog.component.scss
@@ -59,7 +59,7 @@
   }
 
   .result-title {
-    font: 500 18px / 24px Roboto, "Helvetica Neue", sans-serif;
+    font: 500 18px / 24px "思源黑体", Roboto, "Helvetica Neue", sans-serif;
     letter-spacing: 0.1px;
     margin: 8px 0;
     text-align: center;
@@ -99,7 +99,7 @@
         letter-spacing: 0.25px;
         padding: 0 24px;
         margin-bottom: 16px;
-        font-family: Roboto Mono, "Helvetica Neue", monospace;
+        font-family: "思源黑体", Roboto Mono, "Helvetica Neue", monospace;
 
         &.even {
           text-align: right;
