--- a/src/app/modules/login/pages/login/reset-password-request.component.scss
+++ b/src/app/modules/login/pages/login/reset-password-request.component.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../../../../../scss/constants';
+@import "../../../../../scss/constants";
 
 :host {
   display: flex;
@@ -21,6 +21,11 @@
   .tb-request-password-reset-content {
     background-color: #eee;
     .tb-request-password-reset-card {
+      .mat-mdc-card {
+        background-image: linear-gradient(to left, #428ffb 0%, #385de2 100%);
+        background-size: cover;
+        background-position: center;
+      }
       @media #{$mat-gt-xs} {
         width: 450px !important;
       }
