--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,19 +15,20 @@
  */
 /* You can add global styles to this file, and also import other style files */
 
-@import '~typeface-roboto/index.css';
-@import '~font-awesome/css/font-awesome.min.css';
-@import 'theme.scss';
-@import './scss/constants';
-@import './scss/animations';
-@import './scss/mixins';
-@import './scss/fonts';
+@import "~typeface-roboto/index.css";
+@import "~font-awesome/css/font-awesome.min.css";
+@import "theme.scss";
+@import "./scss/constants";
+@import "./scss/animations";
+@import "./scss/mixins";
+@import "./scss/fonts";
 
-body, html {
+body,
+html {
   height: 100%;
   min-height: 100%;
   position: relative;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-touch-callout: none;
 
   -webkit-text-size-adjust: 100%;
@@ -40,8 +41,9 @@ body, html {
 body {
   margin: 0;
   padding: 0;
-  background-color: #eee;
+  background-color: #f7f8fa;
   overflow: hidden;
+  font-family: "思源黑体";
 }
 
 tb-root {
@@ -78,9 +80,9 @@ a:not(.mat-mdc-button-base) {
   font-weight: 400;
   color: #106cc8;
   text-decoration: none;
-  border-bottom: 1px solid rgba(64, 84, 178, .25);
+  border-bottom: 1px solid rgba(64, 84, 178, 0.25);
 
-  transition: border-bottom .35s;
+  transition: border-bottom 0.35s;
 }
 
 a:hover,
@@ -91,11 +93,11 @@ a:focus {
 }
 
 p {
-  margin: .8em 0 1.6em;
+  margin: 0.8em 0 1.6em;
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.6em;
-  letter-spacing: .01em;
+  letter-spacing: 0.01em;
 }
 
 strong {
@@ -106,7 +108,7 @@ blockquote {
   padding-left: 16px;
   margin-left: 0;
   font-style: italic;
-  border-left: 3px solid rgba(0, 0, 0, .12);
+  border-left: 3px solid rgba(0, 0, 0, 0.12);
 }
 
 fieldset {
@@ -133,10 +135,10 @@ section.tb-header-buttons {
   .tb-btn-header {
     margin: 6px 8px;
     position: relative !important;
-    animation: tbMoveFromTopFade .3s ease both;
+    animation: tbMoveFromTopFade 0.3s ease both;
 
     &.tb-hide {
-      animation: tbMoveToTopFade .3s ease both;
+      animation: tbMoveToTopFade 0.3s ease both;
     }
   }
 }
@@ -151,13 +153,12 @@ section.tb-footer-buttons {
   .tb-btn-footer {
     margin: 6px 8px;
     position: relative !important;
-    animation: tbMoveFromBottomFade .3s ease both;
+    animation: tbMoveFromBottomFade 0.3s ease both;
     &.tb-hide {
-      animation: tbMoveToBottomFade .3s ease both;
+      animation: tbMoveToBottomFade 0.3s ease both;
     }
   }
 }
-
 
 .tb-details-buttons {
   button {
@@ -179,7 +180,7 @@ label {
 
     &.tb-required::after {
       font-size: 13px;
-      color: rgba(0, 0, 0, .54);
+      color: rgba(0, 0, 0, 0.54);
       vertical-align: top;
       content: " *";
     }
@@ -194,9 +195,13 @@ label {
   }
   &.tb-small {
     font-size: 12px;
-    color: rgba(0, 0, 0, .54);
+    color: rgba(0, 0, 0, 0.54);
     pointer-events: none;
   }
+}
+
+.mat-typography {
+  font-family: "思源黑体", "Roboto", sans-serif !important;
 }
 
 .tb-noselect {
@@ -204,17 +209,17 @@ label {
 }
 
 .tb-readonly-label {
-  color: rgba(0, 0, 0, .54);
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .tb-disabled-label {
-  color: rgba(0, 0, 0, .44);
+  color: rgba(0, 0, 0, 0.44);
 }
 
 div {
   &.tb-small {
     font-size: 14px;
-    color: rgba(0, 0, 0, .54);
+    color: rgba(0, 0, 0, 0.54);
   }
 }
 
@@ -229,7 +234,7 @@ div {
 .mat-caption {
   &.tb-required::after {
     font-size: 10px;
-    color: rgba(0, 0, 0, .54);
+    color: rgba(0, 0, 0, 0.54);
     vertical-align: top;
     content: " *";
   }
@@ -266,21 +271,21 @@ pre.tb-highlight {
   letter-spacing: normal;
 }
 
-.tb-timewindow-panel, .tb-legend-config-panel, .tb-filter-panel {
+.tb-timewindow-panel,
+.tb-legend-config-panel,
+.tb-filter-panel {
   overflow: hidden;
   background: #fff;
   border-radius: 4px;
-  box-shadow:
-    0 7px 8px -4px rgba(0, 0, 0, .2),
-    0 13px 19px 2px rgba(0, 0, 0, .14),
-    0 5px 24px 4px rgba(0, 0, 0, .12);
+  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2),
+    0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
 }
 
 .tb-panel-actions {
   margin-bottom: 0;
   padding: 8px 8px 8px 16px;
-  .mat-button-base+.mat-button-base,
-  .mat-mdc-button-base+.mat-mdc-button-base {
+  .mat-button-base + .mat-button-base,
+  .mat-mdc-button-base + .mat-mdc-button-base {
     margin-left: 8px;
   }
 }
@@ -296,7 +301,7 @@ pre.tb-highlight {
   font-size: 18px;
   font-weight: 400;
   line-height: 18px;
-  color: rgba(0, 0, 0, .38);
+  color: rgba(0, 0, 0, 0.38);
   &.required {
     color: rgb(221, 44, 0);
   }
@@ -311,7 +316,7 @@ pre.tb-highlight {
 }
 
 .tb-fullscreen-parent {
-  background: #eee;
+  background: #f7f8fa;
   z-index: 0;
 }
 
@@ -328,7 +333,7 @@ mat-label {
 
     &.tb-required::after {
       font-size: 13px;
-      color: rgba(0, 0, 0, .54);
+      color: rgba(0, 0, 0, 0.54);
       vertical-align: top;
       content: " *";
     }
@@ -349,7 +354,7 @@ mat-label {
 }
 
 .tb-error-message {
-  transition: all .3s cubic-bezier(.55, 0, .55, .2);
+  transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
   padding: 10px 0 0 10px;
   overflow: hidden;
   font-size: 12px;
@@ -359,7 +364,7 @@ mat-label {
 
 .tb-autocomplete {
   .mat-mdc-option {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #f7f8fa;
     .mdc-list-item__primary-text {
       overflow: hidden;
       text-overflow: ellipsis;
@@ -372,7 +377,7 @@ mat-label {
       display: block;
       .tb-not-found-content {
         padding: 8px 16px 7px;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px solid #f7f8fa;
       }
     }
   }
@@ -422,7 +427,7 @@ mat-label {
         }
         &.arg-description {
           font-size: 1rem;
-          letter-spacing: .03rem;
+          letter-spacing: 0.03rem;
           color: #444;
         }
       }
@@ -447,8 +452,8 @@ mat-label {
   }
 }
 
-.tb-default, .tb-dark {
-
+.tb-default,
+.tb-dark {
   /*********************************
    * MATERIAL DESIGN CUSTOMIZATIONS
    ********************************/
@@ -459,7 +464,8 @@ mat-label {
   h4,
   h5,
   h6 {
-    &, &.mat-headline-5 {
+    &,
+    &.mat-headline-5 {
       margin-top: 1rem;
       margin-bottom: 1rem;
     }
@@ -480,28 +486,28 @@ mat-label {
   h3 {
     font-size: 2rem;
     font-weight: 500;
-    letter-spacing: .005em;
+    letter-spacing: 0.005em;
   }
 
   h4 {
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 2.4rem;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
   }
 
   h5 {
     font-size: 1.4rem;
     font-weight: 400;
     line-height: 2rem;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
   }
 
   h6 {
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.6rem;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
   }
 
   .mat-mdc-tooltip {
@@ -528,7 +534,8 @@ mat-label {
     position: absolute;
   }
 
-  .layout-padding, .layout-padding > * {
+  .layout-padding,
+  .layout-padding > * {
     @media #{$mat-lt-sm} {
       padding: 4px;
     }
@@ -567,11 +574,13 @@ mat-label {
     }
   }
 
-  .mat-mdc-form-field-icon-prefix, .mat-mdc-form-field-icon-suffix {
+  .mat-mdc-form-field-icon-prefix,
+  .mat-mdc-form-field-icon-suffix {
     z-index: 1;
   }
 
-  .mat-toolbar.mat-mdc-table-toolbar .mat-mdc-form-field.mat-form-field-appearance-fill,
+  .mat-toolbar.mat-mdc-table-toolbar
+    .mat-mdc-form-field.mat-form-field-appearance-fill,
   .mat-mdc-form-field.mat-form-field-appearance-fill.tb-appearance-transparent {
     .mdc-text-field--filled {
       &:before {
@@ -594,7 +603,8 @@ mat-label {
         transform: translateY(-10%);
       }
     }
-    .mat-mdc-form-field-icon-prefix, .mat-mdc-form-field-icon-suffix {
+    .mat-mdc-form-field-icon-prefix,
+    .mat-mdc-form-field-icon-suffix {
       align-self: end;
       > .mat-icon {
         padding-bottom: 4px;
@@ -621,13 +631,17 @@ mat-label {
   // Material table
 
   .mat-toolbar.mat-primary {
+    background: #ffffff;
+    background-color: #ffffff;
+    color: #666666;
     button.mat-mdc-icon-button {
       mat-icon {
-        color: white;
+        color: #666666;
       }
     }
-    .mat-mdc-select-value, .mat-mdc-select-arrow {
-      color: white;
+    .mat-mdc-select-value,
+    .mat-mdc-select-arrow {
+      color: #666666;
     }
   }
 
@@ -644,14 +658,16 @@ mat-label {
     }
   }
 
-  mat-toolbar.mat-mdc-table-toolbar:not(.mat-primary), .mat-mdc-cell, .mat-expansion-panel-header {
+  mat-toolbar.mat-mdc-table-toolbar:not(.mat-primary),
+  .mat-mdc-cell,
+  .mat-expansion-panel-header {
     button.mat-mdc-icon-button {
       mat-icon {
-        color: rgba(0, 0, 0, .54);
+        color: rgba(0, 0, 0, 0.54);
       }
       &[disabled][disabled] {
         mat-icon {
-          color: rgba(0, 0, 0, .26);
+          color: rgba(0, 0, 0, 0.26);
         }
       }
     }
@@ -666,7 +682,9 @@ mat-label {
     margin: 0;
   }
 
-  .mat-mdc-footer-row::after, .mat-mdc-header-row::after, .mat-mdc-row::after {
+  .mat-mdc-footer-row::after,
+  .mat-mdc-header-row::after,
+  .mat-mdc-row::after {
     content: none;
   }
 
@@ -674,11 +692,14 @@ mat-label {
     height: 60px;
   }
 
-  .mat-mdc-footer-row, .mat-mdc-row {
+  .mat-mdc-footer-row,
+  .mat-mdc-row {
     height: 52px;
   }
 
-  .mat-mdc-header-row, .mat-mdc-footer-row, .mat-mdc-row {
+  .mat-mdc-header-row,
+  .mat-mdc-footer-row,
+  .mat-mdc-row {
     min-height: auto;
   }
 
@@ -687,14 +708,15 @@ mat-label {
     display: table-row;
   }
 
-  .mat-mdc-header-cell, .mat-mdc-cell {
+  .mat-mdc-header-cell,
+  .mat-mdc-cell {
     &.mat-mdc-table-sticky {
       background-clip: padding-box;
     }
   }
 
   .mat-mdc-row {
-    transition: background-color .2s;
+    transition: background-color 0.2s;
     &:hover:not(.tb-current-entity) {
       background-color: #f4f4f4;
     }
@@ -706,24 +728,36 @@ mat-label {
     }
   }
 
-  .mat-mdc-row:not(.mat-row-select), .mat-mdc-header-row:not(.mat-row-select) {
-    .mat-mdc-cell:first-child, .mat-mdc-footer-cell:first-child, .mat-mdc-header-cell:first-child {
+  .mat-mdc-row:not(.mat-row-select),
+  .mat-mdc-header-row:not(.mat-row-select) {
+    .mat-mdc-cell:first-child,
+    .mat-mdc-footer-cell:first-child,
+    .mat-mdc-header-cell:first-child {
       padding: 0 12px;
     }
-    .mat-mdc-cell:nth-child(n+2):nth-last-child(n+2), .mat-mdc-footer-cell:nth-child(n+2):nth-last-child(n+2), .mat-mdc-header-cell:nth-child(n+2):nth-last-child(n+2) {
+    .mat-mdc-cell:nth-child(n + 2):nth-last-child(n + 2),
+    .mat-mdc-footer-cell:nth-child(n + 2):nth-last-child(n + 2),
+    .mat-mdc-header-cell:nth-child(n + 2):nth-last-child(n + 2) {
       padding: 0 28px 0 0;
     }
   }
 
-  .mat-mdc-row.mat-row-select, .mat-mdc-header-row.mat-row-select {
-    .mat-mdc-cell:first-child, .mat-mdc-footer-cell:first-child, .mat-mdc-header-cell:first-child {
+  .mat-mdc-row.mat-row-select,
+  .mat-mdc-header-row.mat-row-select {
+    .mat-mdc-cell:first-child,
+    .mat-mdc-footer-cell:first-child,
+    .mat-mdc-header-cell:first-child {
       width: 30px;
       padding: 0 0 0 12px;
     }
-    .mat-mdc-cell:nth-child(2), .mat-mdc-footer-cell:nth-child(2), .mat-mdc-header-cell:nth-child(2) {
+    .mat-mdc-cell:nth-child(2),
+    .mat-mdc-footer-cell:nth-child(2),
+    .mat-mdc-header-cell:nth-child(2) {
       padding: 0 12px;
     }
-    .mat-mdc-cell:nth-child(n+3):nth-last-child(n+2), .mat-mdc-footer-cell:nth-child(n+3):nth-last-child(n+2), .mat-mdc-header-cell:nth-child(n+3):nth-last-child(n+2) {
+    .mat-mdc-cell:nth-child(n + 3):nth-last-child(n + 2),
+    .mat-mdc-footer-cell:nth-child(n + 3):nth-last-child(n + 2),
+    .mat-mdc-header-cell:nth-child(n + 3):nth-last-child(n + 2) {
       padding: 0 28px 0 0;
     }
     &.mat-mdc-selected:not(.tb-current-entity) {
@@ -790,19 +824,22 @@ mat-label {
       text-align: end;
     }
     mat-icon {
-      color: rgba(0, 0, 0, .54);
+      color: rgba(0, 0, 0, 0.54);
     }
   }
 
   .mdc-data-table__row:last-child .mdc-data-table__cell {
-    border-bottom: 1px solid rgba(0,0,0,0.12);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   }
 
-  .mat-mdc-cell, .mat-mdc-footer-cell {
+  .mat-mdc-cell,
+  .mat-mdc-footer-cell {
     font-size: 13px;
   }
 
-  .mat-mdc-cell, .mat-mdc-footer-cell, .mat-mdc-header-cell {
+  .mat-mdc-cell,
+  .mat-mdc-footer-cell,
+  .mat-mdc-header-cell {
     height: 20px;
   }
 
@@ -812,7 +849,7 @@ mat-label {
 
   .mat-toolbar-tools {
     //font-size: 20px;
-    letter-spacing: .005em;
+    letter-spacing: 0.005em;
     //box-sizing: border-box;
     font-weight: 400;
     display: flex;
@@ -918,7 +955,8 @@ mat-label {
     }
   }
 
-  .mat-mdc-card-subtitle, .mat-mdc-card-content {
+  .mat-mdc-card-subtitle,
+  .mat-mdc-card-content {
     font-size: 16px;
   }
 
@@ -933,17 +971,27 @@ mat-label {
   .mat-toolbar {
     line-height: normal;
 
-    h1, h2, h3, h4, h5, h6 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       overflow: hidden;
       text-overflow: ellipsis;
     }
   }
 
-  mat-toolbar *, mat-toolbar :after, mat-toolbar :before {
+  mat-toolbar *,
+  mat-toolbar :after,
+  mat-toolbar :before {
     box-sizing: border-box;
   }
 
-  .mat-mdc-button, .mat-mdc-unelevated-button, .mat-mdc-outlined-button, .mat-mdc-raised-button {
+  .mat-mdc-button,
+  .mat-mdc-unelevated-button,
+  .mat-mdc-outlined-button,
+  .mat-mdc-raised-button {
     &:not(.mat-mdc-icon-button) {
       @media #{$mat-lt-md} {
         padding: 0 6px;
@@ -958,7 +1006,8 @@ mat-label {
   .tb-dialog {
     .mat-mdc-dialog-container {
       padding: 0;
-      > *:first-child, form {
+      > *:first-child,
+      form {
         max-width: 100%;
         min-width: 100%;
         display: flex;
@@ -986,7 +1035,8 @@ mat-label {
       left: 0;
       right: 0;
       .mat-mdc-dialog-container {
-        > *:first-child, form {
+        > *:first-child,
+        form {
           min-width: 100% !important;
         }
         .mat-mdc-dialog-content {
@@ -1007,7 +1057,8 @@ mat-label {
       left: 0;
       right: 0;
       .mat-mdc-dialog-container {
-        > *:first-child, form {
+        > *:first-child,
+        form {
           min-width: 100% !important;
           height: 100%;
         }
@@ -1040,14 +1091,14 @@ mat-label {
     bottom: 0;
     left: 0;
     z-index: 6;
-    background-color: #eee;
+    background-color: #f7f8fa;
     opacity: 1;
   }
 
   .mat-mdc-button.tb-fullscreen-button-style,
   .tb-fullscreen-button-style {
     background: #ccc;
-    opacity: .85;
+    opacity: 0.85;
 
     mat-icon {
       color: #666;
@@ -1085,7 +1136,8 @@ mat-label {
     content: "";
     border: 2px solid #fff;
     border-radius: 50%;
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .14), 0 2px 2px 0 rgba(0, 0, 0, .098), 0 1px 5px 0 rgba(0, 0, 0, .084);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14),
+      0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
 
     @include tb-checkered-bg();
 
@@ -1143,7 +1195,8 @@ mat-label {
         .mat-mdc-form-field-infix {
           padding-top: 8px;
           padding-bottom: 8px;
-          .mat-mdc-chip-grid, .mat-mdc-chip-set {
+          .mat-mdc-chip-grid,
+          .mat-mdc-chip-set {
             min-height: 40px;
           }
         }
