--- a/src/app/modules/home/components/profile/tenant/rate-limits/rate-limits-text.component.scss
+++ b/src/app/modules/home/components/profile/tenant/rate-limits/rate-limits-text.component.scss
@@ -31,11 +31,11 @@
     }
     .tb-rate-limits-value {
       font-weight: bold;
-      border: 1px groove rgba(0, 0, 0, .25);
+      border: 1px groove rgba(0, 0, 0, 0.25);
       border-radius: 4px;
       padding-left: 4px;
       padding-right: 4px;
-      color: #305680;
+      color: #165dff;
     }
   }
 }
