--- a/src/app/modules/home/components/widget/lib/home-page/home-page-widget.scss
+++ b/src/app/modules/home/components/widget/lib/home-page/home-page-widget.scss
@@ -16,7 +16,6 @@
 @import "../../../../../../../scss/constants";
 
 :host {
-
   .tb-card-content {
     width: 100%;
     height: 100%;
@@ -48,14 +47,15 @@
       font-size: 12px;
       line-height: 16px;
     }
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       border-bottom: none;
     }
     &::after {
-      content: 'arrow_forward';
+      content: "arrow_forward";
       display: inline-block;
       transform: rotate(315deg);
-      font-family: 'Material Icons';
+      font-family: "Material Icons";
       font-weight: normal;
       font-style: normal;
       font-size: 18px;
@@ -89,7 +89,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: #305680;
+      background: #165dff;
       -webkit-mask-image: url(/assets/home/no_data_folder_bg.svg);
       -webkit-mask-repeat: no-repeat;
       -webkit-mask-size: contain;
@@ -112,5 +112,4 @@
       line-height: 16px;
     }
   }
-
 }
