--- a/src/app/modules/home/components/widget/lib/rpc/round-switch.component.scss
+++ b/src/app/modules/home/components/widget/lib/rpc/round-switch.component.scss
@@ -62,7 +62,7 @@ $error-height: 14px !default;
         height: 260px;
         min-height: 260px;
         padding: 25px;
-        font-family: sans-serif;
+        font-family: "思源黑体", sans-serif;
         font-size: 48px;
 
         color: #424242;
@@ -71,9 +71,8 @@ $error-height: 14px !default;
         background: linear-gradient(180deg, #bbb, #ddd);
         border-radius: 130px;
 
-        box-shadow: 0 0 0 8px rgba(0, 0, 0, .1),
-        0 0 3px 1px rgba(0, 0, 0, .1),
-        inset 0 8px 3px -8px rgba(255, 255, 255, .4);
+        box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), 0 0 3px 1px rgba(0, 0, 0, 0.1),
+          inset 0 8px 3px -8px rgba(255, 255, 255, 0.4);
 
         input {
           display: none;
@@ -90,18 +89,18 @@ $error-height: 14px !default;
 
         .on {
           top: 10px;
-          font-family: sans-serif;
+          font-family: "思源黑体", sans-serif;
           color: #444;
 
-          transition: all .1s;
+          transition: all 0.1s;
         }
 
         .off {
           bottom: 5px;
 
-          transition: all .1s;
+          transition: all 0.1s;
 
-          transform: scaleY(.85);
+          transform: scaleY(0.85);
         }
 
         .but {
@@ -116,34 +115,40 @@ $error-height: 14px !default;
           border-radius: 400px 400px 400px 400px / 400px 400px 300px 300px;
 
           box-shadow: inset 8px 6px 5px -7px #a2a2a2,
-          inset -8px 6px 5px -7px #a2a2a2,
-          inset 0 -3px 2px -2px rgba(200, 200, 200, .5),
-          0 3px 3px -2px #fff,
-          inset 0 -230px 60px -200px rgba(255, 255, 255, .2),
-          inset 0 220px 40px -200px rgba(0, 0, 0, .3);
+            inset -8px 6px 5px -7px #a2a2a2,
+            inset 0 -3px 2px -2px rgba(200, 200, 200, 0.5), 0 3px 3px -2px #fff,
+            inset 0 -230px 60px -200px rgba(255, 255, 255, 0.2),
+            inset 0 220px 40px -200px rgba(0, 0, 0, 0.3);
 
-          transition: all .2s;
+          transition: all 0.2s;
         }
 
         .back {
-
           box-sizing: border-box;
           width: 210px;
           height: 210px;
           padding: 4px 4px;
           cursor: pointer;
           background-color: #888787;
-          background-image: linear-gradient(-90deg, transparent 30%, transparent 70%), linear-gradient(0deg, rgba(150, 150, 150, 0) 30%, rgba(150, 150, 150, .2) 50%, rgba(150, 150, 150, 0) 70%);
+          background-image: linear-gradient(
+              -90deg,
+              transparent 30%,
+              transparent 70%
+            ),
+            linear-gradient(
+              0deg,
+              rgba(150, 150, 150, 0) 30%,
+              rgba(150, 150, 150, 0.2) 50%,
+              rgba(150, 150, 150, 0) 70%
+            );
           border-radius: 105px;
 
-          box-shadow: 30px 30px 30px -20px rgba(58, 58, 58, .3),
-          -30px 30px 30px -20px rgba(58, 58, 58, .3),
-          0 30px 30px 0 rgba(16, 16, 16, .3),
-          inset 0 -1px 0 0 #484848;
+          box-shadow: 30px 30px 30px -20px rgba(58, 58, 58, 0.3),
+            -30px 30px 30px -20px rgba(58, 58, 58, 0.3),
+            0 30px 30px 0 rgba(16, 16, 16, 0.3), inset 0 -1px 0 0 #484848;
 
-          transition: all .2s;
+          transition: all 0.2s;
         }
-
 
         input:checked + .back .on,
         input:checked + .back .off {
@@ -154,7 +159,7 @@ $error-height: 14px !default;
           top: 10px;
           color: #4c4c4c;
 
-          transform: scaleY(.85);
+          transform: scaleY(0.85);
         }
 
         input:checked + .back .off {
@@ -166,26 +171,36 @@ $error-height: 14px !default;
 
         input:checked + .back .but {
           margin-top: 20px;
-          background: #dcdcdc radial-gradient(circle closest-corner at 50% 15%, rgba(0, 0, 0, .3), transparent);
+          background: #dcdcdc
+            radial-gradient(
+              circle closest-corner at 50% 15%,
+              rgba(0, 0, 0, 0.3),
+              transparent
+            );
           border-radius: 400px 400px 400px 400px / 300px 300px 400px 400px;
 
           box-shadow: inset 8px -4px 5px -7px #a9a9a9,
-          inset -8px -4px 5px -7px #808080,
-          0 -3px 8px -4px rgba(50, 50, 50, .4),
-          inset 0 3px 4px -2px #9c9c9c,
-          inset 0 280px 40px -200px rgba(0, 0, 0, .2),
-          inset 0 -200px 40px -200px rgba(180, 180, 180, .2);
+            inset -8px -4px 5px -7px #808080,
+            0 -3px 8px -4px rgba(50, 50, 50, 0.4), inset 0 3px 4px -2px #9c9c9c,
+            inset 0 280px 40px -200px rgba(0, 0, 0, 0.2),
+            inset 0 -200px 40px -200px rgba(180, 180, 180, 0.2);
         }
 
         input:checked + .back {
           padding: 2px 4px;
 
-          background-image: linear-gradient(0deg, #868686 30%, transparent 70%), linear-gradient(90deg, rgba(115, 115, 115, 0) 0%, rgba(255, 255, 255, .74) 50%, rgba(105, 105, 105, 0) 100%);
+          background-image: linear-gradient(0deg, #868686 30%, transparent 70%),
+            linear-gradient(
+              90deg,
+              rgba(115, 115, 115, 0) 0%,
+              rgba(255, 255, 255, 0.74) 50%,
+              rgba(105, 105, 105, 0) 100%
+            );
 
-          box-shadow: 30px 30px 30px -20px rgba(49, 49, 49, .1),
-          -30px 30px 30px -20px rgba(111, 111, 111, .1),
-          0 30px 30px 0 rgba(0, 0, 0, .2),
-          inset 0 1px 2px 0 rgba(167, 167, 167, .6);
+          box-shadow: 30px 30px 30px -20px rgba(49, 49, 49, 0.1),
+            -30px 30px 30px -20px rgba(111, 111, 111, 0.1),
+            0 30px 30px 0 rgba(0, 0, 0, 0.2),
+            inset 0 1px 2px 0 rgba(167, 167, 167, 0.6);
         }
       }
     }
