--- a/src/app/modules/home/menu/menu-toggle.component.scss
+++ b/src/app/modules/home/menu/menu-toggle.component.scss
@@ -21,7 +21,7 @@
       min-width: 15px;
       margin: auto 0 auto auto;
       background-size: 100% auto;
-      transition: transform .3s ease-in-out;
+      transition: transform 0.3s ease-in-out;
       &.tb-toggled {
         transform: rotateZ(180deg);
       }
@@ -33,12 +33,12 @@
     z-index: 1;
     overflow: hidden;
 
-    transition: .45s cubic-bezier(.35, 0, .25, 1);
+    transition: 0.45s cubic-bezier(0.35, 0, 0.25, 1);
 
     transition-property: height;
 
     a.mat-mdc-button {
-      padding: 0 16px 0 32px;
+      // padding: 0 16px 0 32px;
       font-weight: 500;
       text-transform: none !important;
       text-rendering: optimizeLegibility;
