--- a/src/app/modules/home/pages/notification/template/template-notification-dialog.component.scss
+++ b/src/app/modules/home/pages/notification/template/template-notification-dialog.component.scss
@@ -52,7 +52,7 @@
 
   .tb-hint-available-params {
     border-radius: 6px;
-    background-color: rgba(48, 86, 128, 0.04);
+    background-color: rgba(22, 93, 255, 0.04);
     margin-bottom: 8px;
     padding: 8px 16px;
 
@@ -114,7 +114,7 @@
       .mat-horizontal-content-container {
         height: 550px;
         max-height: 100%;
-        width: 100%;;
+        width: 100%;
         overflow-y: auto;
         scrollbar-gutter: stable;
         @media #{$mat-gt-sm} {
