--- a/src/app/modules/home/pages/security/security.component.scss
+++ b/src/app/modules/home/pages/security/security.component.scss
@@ -32,7 +32,8 @@
     }
 
     .card-title {
-      font: 500 18px / 24px Roboto, "Helvetica Neue", sans-serif;
+      font: 500 18px / 24px "思源黑体 Medium", Roboto, "Helvetica Neue",
+        sans-serif;
       letter-spacing: 0.15px;
       margin-top: 0;
     }
@@ -62,7 +63,7 @@
       }
 
       .mat-icon[data-mat-icon-name="check"] {
-        color: #24A148;
+        color: #24a148;
       }
     }
 
@@ -72,12 +73,12 @@
     }
 
     .token-text {
-      font: 400 14px / 16px Roboto, "Helvetica Neue", sans-serif;
+      font: 400 14px / 16px "思源黑体", Roboto, "Helvetica Neue", sans-serif;
       letter-spacing: 0.25px;
       padding: 8px 0;
 
       > .date {
-        opacity: .7;
+        opacity: 0.7;
       }
     }
   }
@@ -98,7 +99,7 @@
     padding: 24px 0;
 
     .provider-title {
-      font: 400 14px / 16px Roboto, "Helvetica Neue", sans-serif;
+      font: 400 14px / 16px "思源黑体", Roboto, "Helvetica Neue", sans-serif;
       letter-spacing: 0.25px;
       margin: 0 0 8px;
     }
