--- a/src/app/modules/login/pages/login/reset-password.component.scss
+++ b/src/app/modules/login/pages/login/reset-password.component.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../../../../../scss/constants';
+@import "../../../../../scss/constants";
 
 :host {
   display: flex;
@@ -26,7 +26,7 @@
       }
     }
 
-    .tb-card-title{
+    .tb-card-title {
       padding-top: 0;
       padding-bottom: 0;
     }
