--- a/src/app/modules/login/pages/login/two-factor-auth-login.component.scss
+++ b/src/app/modules/login/pages/login/two-factor-auth-login.component.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../../../../../scss/constants';
+@import "../../../../../scss/constants";
 
 :host {
   display: flex;
@@ -30,7 +30,7 @@
       }
 
       .mat-mdc-card-title {
-        font: 400 28px / 36px Roboto, "Helvetica Neue", sans-serif;
+        font: 400 28px / 36px "思源黑体", Roboto, "Helvetica Neue", sans-serif;
       }
 
       .mat-mdc-card-content {
@@ -57,7 +57,8 @@
       }
 
       .timer {
-        font: 500 12px / 14px Roboto, "Helvetica Neue", sans-serif;
+        font: 500 12px / 14px "思源黑体 Medium", Roboto, "Helvetica Neue",
+          sans-serif;
         color: rgba(255, 255, 255, 0.8);
       }
 
@@ -76,7 +77,7 @@
       text-align: start;
       font-weight: 400;
       &:not([disabled][disabled]) {
-        border-color: rgba(255, 255, 255, .8);
+        border-color: rgba(255, 255, 255, 0.8);
       }
     }
 
