--- a/src/app/shared/components/fab-toolbar.component.scss
+++ b/src/app/shared/components/fab-toolbar.component.scss
@@ -15,15 +15,15 @@
  */
 @use "sass:math";
 
-$font-size:   10px !default;
+$font-size: 10px !default;
 @function rem($multiplier) {
   @return $multiplier * $font-size;
 }
 
-$button-fab-width: rem(5.600) !default;
-$button-fab-height: rem(5.600) !default;
-$button-fab-padding: rem(1.60) !default;
-$icon-button-margin: rem(0.600) !default;
+$button-fab-width: rem(5.6) !default;
+$button-fab-height: rem(5.6) !default;
+$button-fab-padding: rem(1.6) !default;
+$icon-button-margin: rem(0.6) !default;
 $z-index-fab: 20 !default;
 
 $swift-ease-in-duration: 0.3s !default;
@@ -32,13 +32,19 @@ $swift-ease-in: all $swift-ease-in-duration $swift-ease-in-timing-function !defa
 
 @mixin rtl-prop($ltr-prop, $rtl-prop, $value, $reset-value) {
   #{$ltr-prop}: $value;
-  [dir=rtl] & {
+  [dir="rtl"] & {
     #{$ltr-prop}: $reset-value;
     #{$rtl-prop}: $value;
   }
 }
 
-@mixin fab-position($spot, $top: auto, $right: auto, $bottom: auto, $left: auto) {
+@mixin fab-position(
+  $spot,
+  $top: auto,
+  $right: auto,
+  $bottom: auto,
+  $left: auto
+) {
   &.mat-fab-#{$spot} {
     top: $top;
     right: $right;
@@ -49,10 +55,34 @@ $swift-ease-in: all $swift-ease-in-duration $swift-ease-in-timing-function !defa
 }
 
 @mixin fab-all-positions() {
-  @include fab-position(bottom-right, auto, math.div(($button-fab-width - $button-fab-padding), 2), math.div(($button-fab-height - $button-fab-padding), 2), auto);
-  @include fab-position(bottom-left, auto, auto, math.div(($button-fab-height - $button-fab-padding), 2), math.div(($button-fab-width - $button-fab-padding), 2));
-  @include fab-position(top-right, math.div(($button-fab-height - $button-fab-padding), 2), math.div(($button-fab-width - $button-fab-padding), 2), auto, auto);
-  @include fab-position(top-left, math.div(($button-fab-height - $button-fab-padding), 2), auto, auto, math.div(($button-fab-width - $button-fab-padding), 2));
+  @include fab-position(
+    bottom-right,
+    auto,
+    math.div(($button-fab-width - $button-fab-padding), 2),
+    math.div(($button-fab-height - $button-fab-padding), 2),
+    auto
+  );
+  @include fab-position(
+    bottom-left,
+    auto,
+    auto,
+    math.div(($button-fab-height - $button-fab-padding), 2),
+    math.div(($button-fab-width - $button-fab-padding), 2)
+  );
+  @include fab-position(
+    top-right,
+    math.div(($button-fab-height - $button-fab-padding), 2),
+    math.div(($button-fab-width - $button-fab-padding), 2),
+    auto,
+    auto
+  );
+  @include fab-position(
+    top-left,
+    math.div(($button-fab-height - $button-fab-padding), 2),
+    auto,
+    auto,
+    math.div(($button-fab-width - $button-fab-padding), 2)
+  );
 }
 
 mat-fab-toolbar {
@@ -72,8 +102,10 @@ mat-fab-toolbar {
     z-index: $z-index-fab;
 
     button.mat-mdc-fab {
+      background: transparent;
+      background-color: transparent;
       overflow: visible !important;
-      opacity: .5;
+      opacity: 0.5;
       mat-icon {
         position: relative;
         z-index: $z-index-fab + 2;
@@ -98,18 +130,16 @@ mat-fab-toolbar {
       flex-direction: row-reverse;
 
       > .mat-mdc-button:first-child {
-        @include rtl-prop(margin-right, margin-left, 0.6rem, auto)
+        @include rtl-prop(margin-right, margin-left, 0.6rem, auto);
       }
 
       > .mat-mdc-button:first-child {
         @include rtl-prop(margin-left, margin-right, -0.8rem, auto);
       }
 
-
       > .mat-mdc-button:last-child {
         @include rtl-prop(margin-right, margin-left, 8px, auto);
       }
-
     }
   }
 
@@ -162,7 +192,7 @@ mat-fab-toolbar {
   &.mat-animation {
     mat-fab-trigger {
       button.mat-mdc-fab {
-        transition: opacity .3s cubic-bezier(.55, 0, .55, .2) .2s;
+        transition: opacity 0.3s cubic-bezier(0.55, 0, 0.55, 0.2) 0.2s;
         mat-icon {
           transition: all $icon-delay ease-in;
         }
@@ -179,7 +209,7 @@ mat-fab-toolbar {
     }
     &.mat-is-open {
       mat-fab-trigger > button.mat-mdc-fab {
-        transition: opacity .3s cubic-bezier(.55, 0, .55, .2);
+        transition: opacity 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
       }
     }
   }
