--- a/src/app/shared/components/markdown.component.scss
+++ b/src/app/shared/components/markdown.component.scss
@@ -27,7 +27,7 @@
 
     @each $heading in $headings {
       #{$heading} {
-        color: #0F161D;
+        color: #0f161d;
         line-height: normal;
         font-weight: 500;
         border-bottom: none;
@@ -49,12 +49,14 @@
       margin-top: 10px;
     }
 
-    p, div {
+    p,
+    div {
       color: rgba(15, 22, 29, 0.8);
       line-height: 1.5em;
     }
 
-    & > p, & > div {
+    & > p,
+    & > div {
       padding-right: 32px;
       padding-left: 32px;
     }
@@ -76,7 +78,7 @@
     }
 
     li {
-      padding-bottom: .75em;
+      padding-bottom: 0.75em;
       line-height: 1.5em;
 
       ul {
@@ -104,7 +106,7 @@
     & > table {
       margin-left: 32px;
       width: calc(100% - 64px);
-      border: 1px solid rgba(42, 125, 236, .2);
+      border: 1px solid rgba(42, 125, 236, 0.2);
       border-radius: 4px;
       border-collapse: unset;
       border-spacing: 0;
@@ -119,11 +121,11 @@
 
       & > thead {
         background-color: #f9fbff;
-        color: rgba(33, 37, 41, .6);
+        color: rgba(33, 37, 41, 0.6);
 
         & > tr {
           & > th {
-            border-bottom: 1px solid rgba(42, 125, 236, .2);
+            border-bottom: 1px solid rgba(42, 125, 236, 0.2);
             font-size: 16px;
             padding: 12px 16px;
             text-align: left;
@@ -131,7 +133,7 @@
             @media screen and (max-width: 400px) {
               font-size: 12px;
               padding: 12px 4px;
-              code:not([class*=language-]) {
+              code:not([class*="language-"]) {
                 font-size: 12px;
               }
             }
@@ -142,7 +144,7 @@
       & > tbody {
         & > tr:not(:last-child) {
           & > td {
-            border-bottom: 1px solid rgba(42, 125, 236, .2);
+            border-bottom: 1px solid rgba(42, 125, 236, 0.2);
           }
         }
 
@@ -156,7 +158,7 @@
             @media screen and (max-width: 400px) {
               font-size: 12px;
               padding: 12px 4px;
-              code:not([class*=language-]) {
+              code:not([class*="language-"]) {
                 font-size: 12px;
               }
             }
@@ -164,18 +166,21 @@
         }
       }
 
-      th, td {
-        font-size: .85em;
+      th,
+      td {
+        font-size: 0.85em;
         padding: 8px;
         margin: 0;
         text-align: left;
       }
 
-      td[align=center], th[align=center] {
+      td[align="center"],
+      th[align="center"] {
         text-align: center;
       }
 
-      td[align=right], th[align=right] {
+      td[align="right"],
+      th[align="right"] {
         text-align: right;
       }
 
@@ -184,7 +189,6 @@
         padding-right: 0;
       }
     }
-
 
     div.divider {
       padding-top: 32px;
@@ -207,12 +211,13 @@
       padding: 10px 20px;
       line-height: 24px;
       color: #fff;
-      background-color: #305680;
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+      background-color: #165dff;
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.14),
+        0 3px 1px -2px rgba(0, 0, 0, 0.2);
       text-decoration: none;
       font-size: 16px;
       font-weight: 500;
-      transition: background-color .4s cubic-bezier(.25, .8, .25, 1);
+      transition: background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 
       &:hover {
         background-color: #264363;
@@ -257,7 +262,7 @@
       }
     }
 
-    code:not([class*=language-]) {
+    code:not([class*="language-"]) {
       color: #eb5757;
       font-family: monospace;
       font-size: 16px;
@@ -288,9 +293,9 @@
         p {
           padding: 8px;
           top: 1px;
-          transition: .2s;
+          transition: 0.2s;
           color: #2a7dec;
-          background: rgba(255, 255, 255, .85);
+          background: rgba(255, 255, 255, 0.85);
           backdrop-filter: blur(4px);
           opacity: 0;
           font-weight: 500;
@@ -311,7 +316,8 @@
             position: initial;
             width: 18px;
             height: 18px;
-            filter: invert(51%) sepia(6%) saturate(172%) hue-rotate(177deg) brightness(94%) contrast(92%);
+            filter: invert(51%) sepia(6%) saturate(172%) hue-rotate(177deg)
+              brightness(94%) contrast(92%);
           }
         }
       }
@@ -330,14 +336,16 @@
 
           div {
             img {
-              filter: invert(49%) sepia(97%) saturate(3730%) hue-rotate(200deg) brightness(95%) contrast(95%);
+              filter: invert(49%) sepia(97%) saturate(3730%) hue-rotate(200deg)
+                brightness(95%) contrast(95%);
             }
           }
         }
       }
     }
 
-    th, td {
+    th,
+    td {
       div.code-wrapper {
         display: inline-block;
         width: 100%;
@@ -352,17 +360,24 @@
 
     pre[class*="language-"] {
       font-size: 16px;
-      border: 1px solid rgba(42, 125, 236, .2);
+      border: 1px solid rgba(42, 125, 236, 0.2);
       border-radius: 4px;
       background: 0 0;
       padding: 8px 16px;
       color: #212529;
 
-      .token.atrule, .token.attr-value, .token.keyword {
+      .token.atrule,
+      .token.attr-value,
+      .token.keyword {
         color: #2a7dec;
       }
 
-      .token.selector, .token.attr-name, .token.string, .token.char, .token.builtin, .token.inserted {
+      .token.selector,
+      .token.attr-name,
+      .token.string,
+      .token.char,
+      .token.builtin,
+      .token.inserted {
         color: #eb5757;
       }
 
@@ -385,7 +400,7 @@
             background: #f9fbff;
 
             & > span:before {
-              color: rgba(33, 37, 41, .6);
+              color: rgba(33, 37, 41, 0.6);
               padding-right: 0;
             }
           }
