--- a/src/app/shared/components/user-menu.component.html
+++ b/src/app/shared/components/user-menu.component.html
@@ -19,8 +19,16 @@
   <div fxHide.lt-lg *ngIf="displayUserInfo" class="tb-user-info" fxLayout="row">
     <mat-icon class="material-icons tb-mini-avatar">account_circle</mat-icon>
     <div fxLayout="column" fxLayoutAlign="center">
-      <span *ngIf="userDisplayName$ | async; let userDisplayName" class="tb-user-display-name">{{ userDisplayName }}</span>
-      <span *ngIf="authorityName$ | async; let authorityName" class="tb-user-authority">{{ authorityName | translate }}</span>
+      <span
+        *ngIf="userDisplayName$ | async; let userDisplayName"
+        class="tb-user-display-name"
+        >{{ userDisplayName }}</span
+      >
+      <span
+        *ngIf="authorityName$ | async; let authorityName"
+        class="tb-user-authority"
+        >{{ authorityName | translate }}</span
+      >
     </div>
   </div>
   <button mat-icon-button [matMenuTriggerFor]="userMenu">
@@ -36,7 +44,12 @@
         <mat-icon class="material-icons">lock</mat-icon>
         <span translate>security.security</span>
       </button>
-      <button mat-menu-item (click)="logout()">
+      <!-- 客户用户不能注销，因为客户用户都是在桌面端登录 -->
+      <button
+        *ngIf="!userAgent.includes('Electron')"
+        mat-menu-item
+        (click)="logout()"
+      >
         <mat-icon class="material-icons">exit_to_app</mat-icon>
         <span translate>home.logout</span>
       </button>
