--- a/src/theme.scss
+++ b/src/theme.scss
@@ -13,16 +13,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@use '@angular/material' as mat;
-@use 'theme-overwrites' as overwrites;
-@import '../theme/datepicker-theme';
-@import './scss/constants';
+@use "@angular/material" as mat;
+@use "theme-overwrites" as overwrites;
+@import "../theme/datepicker-theme";
+@import "./scss/constants";
 
 @include mat.all-component-typographies();
 @include mat.core();
 
-$tb-primary-color: #305680;
-$tb-secondary-color: #527dad;
+$tb-primary-color: #165dff;
+$tb-secondary-color: lighten($tb-primary-color, 30%);
 $tb-hue3-color: #a7c1de;
 
 $tb-dark-primary-color: #9fa8da;
@@ -57,30 +57,54 @@ $tb-mat-indigo: (
     A200: white,
     A400: white,
     A700: white,
-  )
+  ),
 );
 
 $tb-primary: mat.define-palette($tb-mat-indigo);
 $tb-accent: mat.define-palette(mat.$deep-orange-palette);
 
-$background: (background: map_get(mat.$grey-palette, 200));
+$background: (
+  background: map_get(mat.$grey-palette, 200),
+);
 
-$tb-theme-background: map_merge(mat.$light-theme-background-palette, $background);
+$tb-theme-background: map_merge(
+  mat.$light-theme-background-palette,
+  $background
+);
 
-$tb-mat-theme: mat.define-light-theme((
-  color: (
-    primary: $tb-primary,
-    accent: $tb-accent
-  ),
-  typography: mat.define-typography-config(
-    $button: mat.define-typography-level(14px, 36px, 500, $letter-spacing: 0.03125em)
-  ),
-  density: 0
-));
+$tb-mat-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $tb-primary,
+      accent: $tb-accent,
+    ),
+    typography:
+      mat.define-typography-config(
+        $button:
+          mat.define-typography-level(
+            14px,
+            36px,
+            500,
+            $letter-spacing: 0.03125em
+          ),
+      ),
+    density: 0,
+  )
+);
 
 $color: map_get($tb-mat-theme, color);
-$color: map_merge($color, (background: $tb-theme-background));
-$tb-mat-theme: map_merge($tb-mat-theme, (color: $color));
+$color: map_merge(
+  $color,
+  (
+    background: $tb-theme-background,
+  )
+);
+$tb-mat-theme: map_merge(
+  $tb-mat-theme,
+  (
+    color: $color,
+  )
+);
 $tb-theme: map_merge($tb-mat-theme, $color);
 
 $primary: mat.get-color-from-palette($tb-primary);
@@ -116,18 +140,18 @@ $tb-dark-mat-indigo: (
     A200: rgba(black, 0.87),
     A400: rgba(black, 0.87),
     A700: rgba(black, 0.87),
-  )
+  ),
 );
 
 $tb-dark-primary: mat.define-palette($tb-dark-mat-indigo);
 
 $tb-dark-theme-background: (
   status-bar: black,
-  app-bar:    map_get($tb-dark-mat-indigo, 900),
+  app-bar: map_get($tb-dark-mat-indigo, 900),
   background: map_get($tb-dark-mat-indigo, 800),
-  hover:      rgba(white, 0.04),
-  card:       map_get($tb-dark-mat-indigo, 800),
-  dialog:     map_get($tb-dark-mat-indigo, 800),
+  hover: rgba(white, 0.04),
+  card: map_get($tb-dark-mat-indigo, 800),
+  dialog: map_get($tb-dark-mat-indigo, 800),
   disabled-button: rgba(white, 0.12),
   raised-button: map-get($tb-dark-mat-indigo, 50),
   focused-button: rgba(white, 0.12),
@@ -139,18 +163,30 @@ $tb-dark-theme-background: (
   tooltip: map_get(mat.$grey-palette, 700),
 );
 
-$tb-dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $tb-dark-primary,
-    accent: $tb-accent
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$tb-dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $tb-dark-primary,
+      accent: $tb-accent,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
 $color: map_get($tb-dark-theme, color);
-$color: map_merge($color, (background: $tb-dark-theme-background));
-$tb-dark-theme: map_merge($tb-dark-theme, (color: $color));
+$color: map_merge(
+  $color,
+  (
+    background: $tb-dark-theme-background,
+  )
+);
+$tb-dark-theme: map_merge(
+  $tb-dark-theme,
+  (
+    color: $color,
+  )
+);
 $tb-dark-theme: map_merge($tb-dark-theme, $color);
 
 @mixin mat-fab-toolbar-theme($theme) {
@@ -162,24 +198,24 @@ $tb-dark-theme: map_merge($tb-dark-theme, $color);
 
   mat-fab-toolbar {
     .mat-fab-toolbar-background {
-      background: mat.get-color-from-palette($background, app-bar);
+      // background: mat.get-color-from-palette($background, app-bar);
       color: mat.get-color-from-palette($foreground, text);
     }
     &.mat-primary {
       .mat-fab-toolbar-background {
-        background: mat.get-color-from-palette($primary);
+        // background: mat.get-color-from-palette($primary);
         color: mat.get-color-from-palette($primary, default-contrast);
       }
     }
     &.mat-accent {
       .mat-fab-toolbar-background {
-        background: mat.get-color-from-palette($accent);
+        // background: mat.get-color-from-palette($accent);
         color: mat.get-color-from-palette($accent, default-contrast);
       }
     }
     &.mat-warn {
       .mat-fab-toolbar-background {
-        background: mat.get-color-from-palette($warn);
+        // background: mat.get-color-from-palette($warn);
         color: mat.get-color-from-palette($warn, default-contrast);
       }
     }
@@ -200,17 +236,17 @@ $tb-dark-theme: map_merge($tb-dark-theme, $color);
 
   mat-fab-toolbar {
     .mat-fab-toolbar-background {
-      background: mat.get-color-from-palette($background, app-bar);
+      // background: mat.get-color-from-palette($background, app-bar);
       color: mat.get-color-from-palette($foreground, text);
     }
     &.mat-primary {
       .mat-fab-toolbar-background {
-        @include _mat-toolbar-inverse-color($primary);
+        // @include _mat-toolbar-inverse-color($primary);
       }
     }
     mat-toolbar {
       &.mat-primary {
-        @include _mat-toolbar-inverse-color($primary);
+        // @include _mat-toolbar-inverse-color($primary);
         button.mat-mdc-icon-button {
           mat-icon {
             color: mat.get-color-from-palette($primary);
@@ -219,22 +255,23 @@ $tb-dark-theme: map_merge($tb-dark-theme, $color);
       }
     }
     .mat-mdc-fab {
+      background: transparent;
+      background-color: transparent;
       &.mat-primary {
-        background: mat.get-color-from-palette($primary, default-contrast);
+        // background: mat.get-color-from-palette($primary, default-contrast);
         color: mat.get-color-from-palette($primary);
       }
     }
   }
-
 }
 
 @mixin tb-components-theme($theme) {
   $primary: map-get($theme, primary);
   $warn: map-get($theme, warn);
 
-  mat-toolbar{
+  mat-toolbar {
     &.mat-hue-3 {
-      background-color: mat.get-color-from-palette($primary, 'A100');
+      // background-color: mat.get-color-from-palette($primary, "A100");
     }
   }
 
@@ -267,6 +304,20 @@ $tb-dark-theme: map_merge($tb-dark-theme, $color);
   @include tb-components-theme($tb-theme);
   @include overwrites.theme-overwrites($tb-primary, $tb-theme);
   @include mat.typography-hierarchy($tb-theme);
+  font-family: "思源黑体" !important;
+  --mdc-typography-body2-font-family: "思源黑体" !important;
+  --mdc-typography-caption-font-family: "思源黑体" !important;
+  --mdc-typography-body1-font-family: "思源黑体" !important;
+  --mdc-typography-font-family: "思源黑体" !important;
+}
+.tb-default .mat-toolbar,
+.tb-default .mat-toolbar h1,
+.tb-default .mat-toolbar h2,
+.tb-default .mat-toolbar h3,
+.tb-default .mat-toolbar h4,
+.tb-default .mat-toolbar h5,
+.tb-default .mat-toolbar h6 {
+  font-family: "思源黑体" !important;
 }
 
 .tb-dark {
